<resources>
    <string name="app_name">KasiD Driver</string>
    <string name="Notification_Listener">Notification Listener</string>
    <string name="ACTION_NOTIFICATION_LISTENER">co.za.droppa.ACTION_NOTIFICATION_LISTENER</string>
    <string name="notification">notification</string>
    <string name="connection">android.net.wifi.supplicant.STATE_CHANGE</string>
    <string name="connection_bundle">connection</string>
    <string name="connection_status">connection_status</string>
    <string name="android_net_conn_connectivity_change">android.net.conn.CONNECTIVITY_CHANGE</string>
    <string name="local_DB">local_DB</string>
    <string name="Fist_time_visit">Fist_time_visit</string>
    <string name="active_status">active_status</string>
    <string name="user_account">user_account</string>
    <string name="skynet_driver_account">skynet_driver_account</string>
    <string name="driver_data">driver_data</string>
    <string name="fees">fees</string>
    <string name="profile">profile</string>
    <string name="driver_auto_login">driver_auto_login</string>
    <string name="new_notifications">new_notification</string>
    <string name="token_bearer">Bearer </string>
    <string name="POINT_LATITUDE_KEY">POINT_LATITUDE_KEY</string>
    <string name="POINT_LONGITUDE_KEY">POINT_LONGITUDE_KEY</string>
    <string name="street_name">street_name</string>
    <string name="is_user_blocked">is_user_blocked</string>
    <string name="is_app_synced">is_app_synced</string>
    <string name="property_base_url">base_url2</string>
    <string name="property_dromain">dromain</string>
    <string name="property_onesignal_app_id">onesignal_app_id</string>
    <string name="MAPS_API_KEY">MAPS_API_KEY</string>
    <string name="firebase_url">firebase_url</string>
    <string-array name="provinces">
        <item>Select Province</item>
        <item>Gauteng</item>
        <item>Limpopo</item>
        <item>Kwa Zulu Natal</item>
        <item>Northern Cape</item>
        <item>Western Cape</item>
        <item>North West</item>
        <item>Free State</item>
        <item>Mpumalanga</item>
        <item>Eastern Cape</item>
    </string-array>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="forgot_password_not_underlined">Forgot Password</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Rhulani Chauke Mpho</string>
    <string name="nav_header_subtitle">Mini Van</string>
    <string name="nav_header_subtitle_1">CD 45 LP GP</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_booking">Booking</string>
    <string name="menu_retail_bookings">Retail Bookings</string>
    <string name="menu_scan">Scan POD</string>
    <string name="menu_history">Booking</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_sdx">Skynet SDX</string>
    <string name="specialCharacters">\'"[!@#$%*()_+=|?{}\\[\\]~-]</string>
    <string name="title_activity_view_bucket_booking">ViewBucketBooking</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="whatsap_url">https://wa.me/</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="vehicle_make">Vehicle Make</string>
    <string name="reg_number">Reg Number</string>
    <string name="enter_reg_number">Enter Registration Number</string>
    <string name="color">Color</string>
    <string name="canopy">Canopy</string>
    <string name="summary">Summary</string>
    <string name="total_amount">Total Amount</string>
    <string name="amount_due">Amount Due</string>
    <string name="r_00">R.00</string>
    <string name="_7_sep_2023">7 Sep 2023</string>
    <string name="next_payment">Next Payment</string>
    <string name="r0_00">R0.00</string>
    <string name="rhulani_chauke_mpho">Rhulani Chauke Mpho</string>
    <string name="droppa_driver_owner">Droppa Driver/Owner</string>
    <string name="personal_information">Personal Information</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="idNumber">ID Number</string>
    <string name="rulani_droppa_com">rulani@droppa.com</string>
    <string name="contact_number">Contact Number</string>
    <string name="_071_555_1144">071 555 1144</string>
    <string name="completed_bookings">Completed bookings</string>
    <string name="_250">250</string>
    <string name="joined">Joined</string>
    <string name="_15_june_2023">15 June 2023</string>
    <string name="license_disk_information">License Disk Information</string>
    <string name="attachments">Attachments</string>
    <string name="pending">Pending</string>
    <string name="_0">0</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="successful">Successful</string>
    <string name="upload">Upload</string>
    <string name="vehicle_information">Vehicle Information</string>
    <string name="mini_van">Mini Van</string>
    <string name="wbn_525_gp">WBN 525 GP</string>
    <string name="white">white</string>
    <string name="non">None</string>
    <string name="total_bookings">Total Bookings</string>
    <string name="switch_text">Switch</string>
    <string name="password">password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="haven_t_registered_yet">Haven\'t registered yet?</string>
    <string name="driver_activity">Driver Activity</string>
    <string name="arrived_at_pick_up">Arrived at pick-up</string>
    <string name="_08_00_am">08:00 AM</string>
    <string name="multiple_pick_ups">Multiple Pick Ups</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="send">Send</string>
    <string name="upload_driver_s_license">Upload Driver\'s license</string>
    <string name="upload_a_clear_image_of_your_valid_rsa_driver_s_license">Upload a clear image of your valid RSA drivers license.</string>
    <string name="enter_your_vehicle_information_below">Enter your vehicle information below.</string>
    <string name="welcome_to_the_droppa_driver_app">Welcome to the Droppa Driver App</string>
    <string name="decide_where_when_and_how_you_want_to_earn">Decide where, when and how you want to earn.</string>
    <string name="before_you_register_make_sure_that_you_meet_the_below_requirements">Before you register, make sure that you meet the below requirements.</string>
    <string name="thank_you_for_choosing_to_partner_with_us_let_s_get_started">Thank you for choosing to partner with us. Let\'s get started.</string>
    <string name="_1_you_have_a_valid_police_clearance">1. You have a valid police clearance.</string>
    <string name="_3_your_vehicle_has_a_mileage_of_160_000km_or_less">3. Your vehicle has a mileage of 160 000km or less.</string>
    <string name="_4_you_have_a_valid_driver_s_license_and_insurance_for_your_vehicle">4. You have a valid Driver\'s license and insurance for your vehicle.</string>
    <string name="Ts_Cs"><![CDATA[Terms & Conditions]]></string>
    <string name="sync_data">Sync Data</string>
    <string name="home">Home</string>
    <string name="gps">GPS:</string>
    <string name="back_button">back button</string>
    <string name="enter_your_id_number_below_and_we_will_send_you_an_otp_to_verify_your_account">Enter your ID Number below and we will send you an OTP to verify your account</string>
    <string name="id_number">ID Number</string>
    <string name="skynet_logo">Skynet Logo</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit_new_password">Submit New Password</string>
    <string name="password_reset">Password Reset</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="sync_needed">Sync Needed</string>
    <string name="enabled">Enabled</string>
    <string name="status">Status:</string>
    <string name="accounts">Accounts</string>
    <string name="financials">Financials</string>
    <string name="accounts_icon">accounts icon</string>
    <string name="financial_icon">Financial icon</string>
    <string name="sync_icon">Sync Icon</string>
    <string name="home_icon">Home Icon</string>
    <string name="connection_indicator_icon">Connection Indicator Icon</string>
</resources>