<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".NewHomePage">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/skynet_red"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="4dp"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_centerVertical="true"
                android:layout_gravity="start"
                android:contentDescription="@string/back_button"
                android:src="@drawable/baseline_arrow_back_24" />

            <TextView
                style="@style/TextViewHeading"
                android:id="@+id/customTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="@dimen/title_font_size"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap"
                tools:text="Skynet Rates Title" />

        </RelativeLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/networkLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/component_spacing_25dp"
            android:paddingVertical="@dimen/component_spacing_10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#E6E6E6"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/component_spacing_15dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/profile_placeholder_veh"
                        android:visibility="gone" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextViewSubHeading"
                        android:layout_gravity="center"
                        android:text="@string/gps"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_gps_status"
                        style="@style/TextViewSubHeading"
                        android:layout_width="0dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:text="@string/enabled" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextViewSubHeading"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:text="@string/status"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/signalStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="15dp"
                        android:contentDescription="@string/connection_indicator_icon"
                        android:src="@drawable/wifi_icon" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/home_frame_layout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_nav"
            android:layout_below="@+id/networkLayout" />

        <LinearLayout
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:background="@color/white_cream"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/home_tab"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingTop="15dp">

                <ImageView
                    android:id="@+id/home_tab_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/home_icon"
                    android:src="@drawable/home_icon" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextViewSubHeading"
                    android:id="@+id/home_tab_text"
                    android:layout_below="@+id/home_tab_icon"
                    android:layout_centerHorizontal="true"
                    android:text="@string/home"
                    android:textColor="@color/black"
                    android:visibility="visible" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/sync_data_tab"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/sync_data_needed"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerHorizontal="true"
                    android:layout_toEndOf="@id/sync_data_icon"
                    android:contentDescription="@string/sync_needed"
                    android:src="@drawable/warning_icon_sync"
                    tools:visibility="visible" />

                <ImageView
                    android:id="@+id/sync_data_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/sync_icon"
                    android:src="@drawable/refresh_icon" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/sync_data_text"
                    style="@style/TextViewSubHeading"
                    android:layout_below="@+id/sync_data_icon"
                    android:layout_centerHorizontal="true"
                    android:text="@string/sync_data"
                    android:textColor="@color/black"
                    android:visibility="visible" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/financial_tab"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="15dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/financial_tab_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/financial_icon"
                    android:src="@drawable/account_icon" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/financial_tab_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/financial_tab_icon"
                    android:layout_centerHorizontal="true"
                    android:text="@string/financials"
                    android:textColor="@color/black"
                    android:visibility="visible" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/accounts_tab"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="15dp">

                <ImageView
                    android:id="@+id/accounts_tab_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/accounts_icon"
                    android:src="@drawable/account_icon" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextViewSubHeading"
                    android:id="@+id/accounts_tab_text"
                    android:layout_below="@+id/accounts_tab_icon"
                    android:layout_centerHorizontal="true"
                    android:text="@string/accounts"
                    android:textColor="@color/black"
                    android:visibility="visible" />

            </RelativeLayout>


        </LinearLayout>

    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>


