<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".fragments.SkyNetForgotPasswordFragment">

    <include layout="@layout/background_splash_gradient" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/component_spacing_10dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="55dp"
        android:background="@drawable/white_card"
        android:elevation="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:contentDescription="@string/skynet_logo"
            android:src="@drawable/kasi_d_logo"/>

        <TextView
            android:id="@+id/pageTitle"
            style="@style/TextViewHeading"
            android:text="@string/forgot_password_not_underlined"
            android:textColor="@color/skynet_color" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextViewSubHeading"
            android:layout_marginTop="@dimen/component_spacing_3dp"
            android:maxLines="2"
            android:paddingHorizontal="@dimen/standard_spacing"
            android:text="@string/enter_your_id_number_below_and_we_will_send_you_an_otp_to_verify_your_account"
            android:textAlignment="center"
            android:textColor="@color/grey_text"
            android:textSize="@dimen/regular_font_size" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="25dp"
            android:paddingTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="-1dp"
                android:orientation="vertical"
                android:paddingTop="@dimen/standard_spacing"
                tools:ignore="UselessParent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idNumberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_background"
                    android:drawableStart="@drawable/email_blue_icon_login"
                    android:drawablePadding="7dp"
                    android:fontFamily="@font/segoe_ui"
                    android:hint="@string/id_number"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:paddingHorizontal="10dp"
                    android:textColor="@color/grey_text"
                    android:textColorHint="@color/light_grey"
                    android:textSize="@dimen/regular_font_size"
                    android:textStyle="bold"
                    app:textInputLayoutFocusedRectEnabled="false" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/getOTPButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginTop="@dimen/component_spacing_25dp"
                    android:background="@drawable/button_background"
                    android:text="@string/send"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/regular_font_size" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>