<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".fragments.SkyNetPasswordResetFragment">

    <include layout="@layout/background_splash_gradient" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="55dp"
        android:background="@drawable/white_card"
        android:elevation="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="@dimen/component_spacing_20dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:contentDescription="@string/skynet_logo"
            android:src="@drawable/kasi_d_logo" />

        <TextView
            style="@style/TextViewHeading"
            android:text="@string/password_reset"
            android:textColor="@color/skynet_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="25dp"
            android:paddingTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/signUpLayout"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:paddingTop="@dimen/standard_spacing">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newPasswordText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_background"
                    android:drawableStart="@drawable/key_blue_password_icon_login"
                    android:drawablePadding="7dp"
                    android:fontFamily="@font/segoe_ui"
                    android:hint="@string/new_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:paddingHorizontal="10dp"
                    android:textColor="@color/grey_text"
                    android:textColorHint="@color/light_grey"
                    android:textSize="@dimen/regular_font_size"
                    android:textStyle="bold"
                    app:textInputLayoutFocusedRectEnabled="false" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPasswordText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/component_spacing_10dp"
                    android:background="@drawable/text_background"
                    android:drawableStart="@drawable/key_blue_password_icon_login"
                    android:drawablePadding="@dimen/component_spacing_7dp"
                    android:fontFamily="@font/segoe_ui"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:lines="1"
                    android:paddingHorizontal="10dp"
                    android:textColor="@color/grey_text"
                    android:textColorHint="@color/light_grey"
                    android:textSize="@dimen/regular_font_size"
                    android:textStyle="bold"
                    app:textInputLayoutFocusedRectEnabled="false" />

                <TextView
                    android:id="@+id/errorMessageText"
                    style="@style/TextViewSubHeading"
                    android:layout_marginTop="@dimen/component_spacing_10dp"
                    android:text="@string/passwords_do_not_match"
                    android:textColor="@color/skynet_red"
                    android:visibility="invisible"
                    tools:visibility="visible"
                    android:textSize="@dimen/regular_font_size" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/submitNewPasswordButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginTop="@dimen/component_spacing_25dp"
                    android:background="@drawable/button_background"
                    android:text="@string/submit_new_password"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/forgot_passwordText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="@dimen/component_spacing_15dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/skynet_color"
                    android:textSize="@dimen/regular_font_size"
                    android:visibility="gone"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/signUpLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center|bottom"
                android:orientation="vertical"
                android:paddingBottom="25dp">

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>